# TickteSystem

./: CMakeLists.txt  README.md  addemployeedialog.cpp  createprojectdialog.cpp  createticketdialog.cpp  createticketdialog.h  createticketdialog.ui  dbmanager.cpp  editemployeedialog.cpp  getChiefProjects.sql  getDepartmentIdByProject.sql  getEmployeeProjects.sql  getEmployeesByDepartment.sql  getFullTicketInfoById.sql  getPrioritiesName.sql  getProjectIdByName.sql  getProjectWatchers.sql  getProjectsName.sql  getStatusesName.sql  getTicketsByEmployee.sql  getTrackersName.sql  getUserLoginInfo.sql  getUserProfileInfo.sql  getUserTickets.sql  getUsersByDepartment.sql  getUsersFullName.sql  insertUser.sql  loginwindow.cpp  loginwindow.ui  mailservice.cpp  mailtest.cpp  mailtest.h  main.cpp  mainwindow.cpp  mainwindow.h  mycertverifier.cpp  myprojectstab.cpp  myprojectstab.h  myprojectstab.ui  myticketstab.cpp  (+22 more)
sql_dump/: dump-ticket_system-202505101735.sql  dump-ticket_system-202505181745.sql  dump-ticket_system-202505182156.sql  dump-ticket_system-202505312108.sql  dump-ticket_system-202506010008.sql  dump-ticket_system-202506141600.sql
storage/ticketFiles/: .gitignore  .ninja_deps  .ninja_log  1 задание.docx  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  Абдуллин_ТР_КС-22-03_СЯиТП_Презентация.pptx  Презентация_рукава_и_раздаточные_краны.pptx  Тема 8-3 задание студентам.docx
